--- a/style.css
+++ b/style.css
@@ -1,47 +1,75 @@
 body {
-    background-color: #e9ecef;
-    font-family:sans-serif;
+    background-color:#2a9d8f;
 }
+
 h1 {
-    color:black;
-    margin: 1em;
-}
-.location {
-    margin: 1.9em;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-.pizza {
-    overflow-wrap: break-word;
-    background-color:#e9ecef;
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border: 1px solid;
-    padding: 3.75em;
-    margin: 1.5em;
 }
-#pizza_sizes {
-    text-align: left;
-    margin:0em; 
-    padding: 0em;
-    display:inline; 
-    float:left
+
+h2 {
+    text-align: center;
 }
-#pizza_prices {
-    text-align: left;
-    margin: 0em; 
-    padding: 0em;
-    display:inline; 
-    float:right
+
+.image{
+    text-align: center;
 }
-#contact {
-    font-family: sans-serif;
+
+.box_format{
+border: 1px;
+padding:1em;
+margin: 1em;
+/*margin-left: 0em;*/
+border-radius: 1em;
+height: 19em;
+}
+
+.small_pizza{
+    background-color:#e9c46a;
+    flex: 1;
+}
+
+.medium_pizza {
+background-color:#f4a261;
+flex: 1;
+}
+
+.large_pizza{
+    background-color:#e76f51;
+    flex: 1;
+}
+
+.contact_details{
+    background-color:#84a59d;
+    height: 8em;
+}
+
+.contacts{
     margin:0em;
-    padding: 0em;
-    display:inline; 
-    float:left;
+    padding: 0em;;
+    display: inline;
+    float: left;
 }
-@media (min-width: 960px) {
-    .pizzas {
+.fa-instagram{
+color: red;
+}
+.fa-facebook{
+    color:navy;
+}
+
+.fa-twitter{
+    color:dodgerblue;
+}
+
+.location{
+    margin:0em;
+    padding:0em;
+    display:inline;
+    float:right;
+}
+
+@media (min-width:960px){
+    .pizzas{
         display: flex;
-    }
+        }
+        
 }
